syntax = "proto3";
option go_package = "github.com/falmar/otel-trivago/api/gen/reservationpb";

import "google/protobuf/timestamp.proto";

package reservationpb;

service ReservationService {
  rpc ListReservations(ReservationListRequest) returns (ReservationListResponse);
  rpc CreateReservation(Reservation) returns (ReservationResponse);
}

enum ReservationStatus {
  RESERVED = 0;
  CHECKED_IN = 1;
  CHECKED_OUT = 2;
  CANCELLED = 3;
}

message Reservation {
  string id = 1;
  string room_id = 2;
  ReservationStatus status = 3;
  google.protobuf.Timestamp start_date = 4;
  google.protobuf.Timestamp end_date = 5;
  google.protobuf.Timestamp created_at = 6;
}

message ReservationRequest {
  string id = 1;
}

message ReservationResponse {
  Reservation reservation = 1;
}

message ReservationListRequest {
  int64 offset = 1;
  int64 limit = 2;

  google.protobuf.Timestamp start_date = 3;
  google.protobuf.Timestamp end_date = 4;
}
message ReservationListResponse {
  repeated Reservation reservations = 1;
  int64 total = 2;
}
