syntax = "proto3";
option go_package = "github.com/falmar/otel-trivago/pkg/proto/v1/staypb";

import "google/protobuf/timestamp.proto";

package staypb;

message Stay {
  string id = 1;
  string room_id = 2;
  string reservation_id = 3;

  google.protobuf.Timestamp check_in = 4;
  google.protobuf.Timestamp check_out = 5;

  string note = 6;

  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

service StayService {
  rpc ListStays(ListStaysRequest) returns (ListStaysResponse) {}
  rpc CreateStay(CreateStayRequest) returns (CreateStayResponse) {}
  rpc UpdateStay(UpdateStayRequest) returns (UpdateStayResponse) {}
}

message ListStaysRequest {
  string room_id = 1;
  string reservation_id = 2;
  int64 limit = 3;
  int64 offset = 4;
}
message ListStaysResponse {
  repeated Stay stays = 1;
  int64 total = 2;
}

message CreateStayRequest {
  string room_id = 1;
  string reservation_id = 2;

  google.protobuf.Timestamp check_in = 3;

  string note = 4;
}
message CreateStayResponse {
  Stay stay = 1;
}

message UpdateStayRequest {
  string id = 1;
  string room_id = 2;

  google.protobuf.Timestamp check_out = 3;

  string note = 4;
}
message UpdateStayResponse {
  Stay stay = 1;
}
